<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/Name"
            android:textColorHint="#FFFFFF"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="16dp"
            android:text="@string/Toppings"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Whipped_Cream"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:paddingLeft="24dp" />


        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chocolate"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:paddingLeft="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="16dp"
            android:text="@string/Quantity"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_decrement_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:onClick="Decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_increment_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="Increment"
                android:text="+" />

        </LinearLayout>
        <Button
            android:id="@+id/button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="submitOrder"
            android:text="@string/ORDER"
            />
        </LinearLayout>
</ScrollView>
